force-app/main/default/objects/Teams_Integration_Settings__c/Teams_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for Microsoft Teams integration via Graph API</description>
    <label>Teams Integration Settings</label>
</CustomObject>