force-app/main/default/objects/Teams_Integration_Settings__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Microsoft Graph API access token for Teams integration</description>
    <label>Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>