force-app/main/default/objects/Teams_Integration_Settings__c/fields/Auto_Generate_Links__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate_Links__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Automatically generate Teams links for online meetings</description>
    <label>Auto Generate Teams Links</label>
    <type>Checkbox</type>
</CustomField>