force-app/main/default/objects/Teams_Integration_Settings__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Microsoft Azure App Registration Client ID</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>