force-app/main/default/objects/Teams_Integration_Settings__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Microsoft Azure App Registration Client Secret</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>