force-app/main/default/objects/Teams_Integration_Settings__c/fields/Default_Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>Default_Meeting_Duration__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Default meeting duration in minutes</description>
    <label>Default Meeting Duration (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>