force-app/main/default/objects/Teams_Integration_Settings__c/fields/Integration_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Integration_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable Teams integration</description>
    <label>Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>