force-app/main/default/objects/Teams_Integration_Settings__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>OAuth refresh token for Microsoft Graph API</description>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>