force-app/main/default/objects/Teams_Integration_Settings__c/fields/Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Id__c</fullName>
    <description>Microsoft Azure Tenant ID</description>
    <label>Tenant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>