force-app/main/default/objects/Teams_Integration_Settings__c/fields/Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Token_Expires_At__c</fullName>
    <description>When the current access token expires</description>
    <label>Token Expires At</label>
    <type>DateTime</type>
</CustomField>